--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -12,22 +12,10 @@ services:
   #     - "./client:/app"
   #   command: yarn start
 
-  # api:
-  #   build: ./server
-  #   ports:
-  #     - "23360:80"
-  #   volumes:
-  #     - "./server:/var/www/html/"
-  #   # command: tail -f /dev/null
-
   api:
-    build: ./server-python
+    build: ./server
     ports:
       - "23360:23360"
     volumes:
-      - "./server-python:/app"
-    # environment:
-      # - FLASK_APP=run.py
-      # - FLASK_DEBUG=1
-    # command: python -m flask run --port=23360
+      - "./server:/app"
     command: python run.py
