--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,16 +6,15 @@ services:
       context: ./client
       args:
         REACT_APP_WEB_API_SERVER: http://localhost:23360/v1.0
+    restart: always
     ports:
-      - "23361:3000"
-    volumes:
-      - "./client:/app"
+      - "23361:5000"
     command: serve -s build -c 0
 
   api:
     build: ./server
+    restart: always
     ports:
       - "23360:23360"
     volumes:
-      - "./server-python:/app"
-    command: crond && python run.py
+      - "./server/runtime:/app/runtime"
