Use websocket to wait the file translating instead of using one ajax.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:8-alpine
 ARG REACT_APP_WEB_API_SERVER
+ARG REACT_APP_WS_API_SERVER
 
 WORKDIR /app
 RUN yarn global add create-react-app serve
@@ -8,5 +9,6 @@ COPY package.json .
 RUN yarn install
 
 ENV REACT_APP_WEB_API_SERVER "$REACT_APP_WEB_API_SERVER"
+ENV REACT_APP_WS_API_SERVER "$REACT_APP_WS_API_SERVER"
 COPY . .
 RUN yarn run build
